fix: controller creation sub namespace

--- a/core/templates/controller.tmpl
+++ b/core/templates/controller.tmpl
@@ -1,6 +1,8 @@
 <?php
 
-namespace App\Controllers;
+declare(strict_types=1);
+
+namespace {{ namespace }};
 
 use Zero\Lib\Http\Request;
 use Zero\Lib\Http\Response;
